--- a/MVC_Todo/VC/InsertVC/InsertVC.storyboard
+++ b/MVC_Todo/VC/InsertVC/InsertVC.storyboard
@@ -8,22 +8,36 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--InserVC-->
+        <!--InsertVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="InserVC" customModule="MVC_Todo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InsertVC" id="Y6W-OH-hqX" customClass="InsertVC" customModule="MVC_Todo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jjj-xs-23S">
                                 <rect key="frame" x="0.0" y="59" width="393" height="60"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p6R-63-j22">
+                                        <rect key="frame" x="10" y="10" width="51" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.left.fill" catalog="system"/>
+                                        <connections>
+                                            <action selector="btnBackAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="HbS-DO-Un2"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="p6R-63-j22" secondAttribute="bottom" constant="10" id="Bok-dB-Eoo"/>
                                     <constraint firstAttribute="height" constant="60" id="JWL-rz-QKs"/>
+                                    <constraint firstItem="p6R-63-j22" firstAttribute="top" secondItem="jjj-xs-23S" secondAttribute="top" constant="10" id="Wx3-oC-e07"/>
+                                    <constraint firstItem="p6R-63-j22" firstAttribute="leading" secondItem="jjj-xs-23S" secondAttribute="leading" constant="10" id="u6m-Ug-Hev"/>
                                 </constraints>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RQi-Wp-Yho">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RQi-Wp-Yho">
                                 <rect key="frame" x="29" y="162" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="UZ2-Bx-gC2"/>
@@ -31,7 +45,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Detail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZgC-Kj-cU9">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Detail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZgC-Kj-cU9">
                                 <rect key="frame" x="29" y="235" width="335" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lRU-dD-TNf"/>
@@ -41,11 +55,15 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gwg-ny-WQv">
                                 <rect key="frame" x="14" y="319" width="365" height="65"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="UVL-V6-GC3"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="ADD"/>
+                                <connections>
+                                    <action selector="brnAddAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="qxf-MD-acY"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -67,6 +85,7 @@
                     </view>
                     <connections>
                         <outlet property="btnAdd" destination="Gwg-ny-WQv" id="tzT-Qt-FG1"/>
+                        <outlet property="btnBack" destination="p6R-63-j22" id="OFC-3t-eIe"/>
                         <outlet property="txfDetail" destination="ZgC-Kj-cU9" id="UVK-4h-e8T"/>
                         <outlet property="txfTitle" destination="RQi-Wp-Yho" id="BlE-VR-x3Z"/>
                     </connections>
@@ -77,8 +96,9 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="arrowshape.left.fill" catalog="system" width="128" height="104"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
