--- a/MVC_Todo/VC/UpdateVC/UpdateVC.storyboard
+++ b/MVC_Todo/VC/UpdateVC/UpdateVC.storyboard
@@ -9,24 +9,98 @@
     </dependencies>
     <scenes>
         <!--UpdateVC-->
-        <scene sceneID="s0d-6b-0kx">
+        <scene sceneID="SZp-XK-qbi">
             <objects>
-                <viewController storyboardIdentifier="UpdateVC" id="Y6W-OH-hqX" customClass="UpdateVC" customModule="MVC_Todo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <viewController storyboardIdentifier="UpdateVC" id="gH2-1w-cea" customClass="UpdateVC" customModule="MVC_Todo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jmu-mF-81S">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ZI-0V-uCt">
+                                <rect key="frame" x="0.0" y="59" width="393" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8gW-cy-qK2">
+                                        <rect key="frame" x="10" y="10" width="51" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.left.fill" catalog="system"/>
+                                        <connections>
+                                            <action selector="btnBack:" destination="gH2-1w-cea" eventType="touchUpInside" id="OIS-0X-Z2w"/>
+                                            <action selector="btnBackAction:" destination="gH2-1w-cea" eventType="touchUpInside" id="vfh-tP-OwC"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="8gW-cy-qK2" firstAttribute="top" secondItem="9ZI-0V-uCt" secondAttribute="top" constant="10" id="4yo-d7-f6K"/>
+                                    <constraint firstItem="8gW-cy-qK2" firstAttribute="leading" secondItem="9ZI-0V-uCt" secondAttribute="leading" constant="10" id="VtA-1H-8VG"/>
+                                    <constraint firstAttribute="height" constant="60" id="az1-bg-PmW"/>
+                                    <constraint firstAttribute="bottom" secondItem="8gW-cy-qK2" secondAttribute="bottom" constant="10" id="giP-yD-zFz"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aRs-bx-5Le">
+                                <rect key="frame" x="29" y="162" width="335" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="m0F-q7-z55"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Detail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KnF-DP-QcU">
+                                <rect key="frame" x="29" y="235" width="335" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Zhi-Jq-1eK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asb-PI-NYY">
+                                <rect key="frame" x="14" y="319" width="365" height="65"/>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="dx6-Dh-elU"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Update"/>
+                                <connections>
+                                    <action selector="brnAddAction:" destination="gH2-1w-cea" eventType="touchUpInside" id="evp-Y5-Xue"/>
+                                    <action selector="btnUpdate:" destination="gH2-1w-cea" eventType="touchUpInside" id="8qk-4s-QHf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="V05-GY-iwb"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aRs-bx-5Le" firstAttribute="top" secondItem="9ZI-0V-uCt" secondAttribute="bottom" constant="43" id="06J-AF-2lo"/>
+                            <constraint firstItem="V05-GY-iwb" firstAttribute="trailing" secondItem="asb-PI-NYY" secondAttribute="trailing" constant="14" id="Dhg-cu-3s1"/>
+                            <constraint firstItem="9ZI-0V-uCt" firstAttribute="leading" secondItem="V05-GY-iwb" secondAttribute="leading" id="Efk-Df-SR0"/>
+                            <constraint firstItem="KnF-DP-QcU" firstAttribute="top" secondItem="aRs-bx-5Le" secondAttribute="bottom" constant="43" id="LGs-G7-G2S"/>
+                            <constraint firstItem="aRs-bx-5Le" firstAttribute="leading" secondItem="V05-GY-iwb" secondAttribute="leading" constant="29" id="MEa-el-i86"/>
+                            <constraint firstItem="V05-GY-iwb" firstAttribute="trailing" secondItem="KnF-DP-QcU" secondAttribute="trailing" constant="29" id="Mdp-Xc-bdS"/>
+                            <constraint firstItem="9ZI-0V-uCt" firstAttribute="top" secondItem="V05-GY-iwb" secondAttribute="top" id="dhT-UQ-iPS"/>
+                            <constraint firstItem="asb-PI-NYY" firstAttribute="top" secondItem="KnF-DP-QcU" secondAttribute="bottom" constant="54" id="ehJ-wQ-bBi"/>
+                            <constraint firstItem="KnF-DP-QcU" firstAttribute="leading" secondItem="V05-GY-iwb" secondAttribute="leading" constant="29" id="pXP-hF-YFf"/>
+                            <constraint firstItem="asb-PI-NYY" firstAttribute="leading" secondItem="V05-GY-iwb" secondAttribute="leading" constant="14" id="t8R-2K-ZLT"/>
+                            <constraint firstItem="V05-GY-iwb" firstAttribute="trailing" secondItem="aRs-bx-5Le" secondAttribute="trailing" constant="29" id="td0-M1-inR"/>
+                            <constraint firstItem="9ZI-0V-uCt" firstAttribute="trailing" secondItem="V05-GY-iwb" secondAttribute="trailing" id="u06-F8-vNw"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnAdd" destination="asb-PI-NYY" id="71F-hM-6si"/>
+                        <outlet property="btnBack" destination="8gW-cy-qK2" id="LCI-0T-WkN"/>
+                        <outlet property="txfDetail" destination="KnF-DP-QcU" id="fMw-As-8Bl"/>
+                        <outlet property="txfTitle" destination="aRs-bx-5Le" id="YN1-9l-hIC"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oEX-lQ-8dJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-16" y="-27"/>
+            <point key="canvasLocation" x="-137" y="-58"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="arrowshape.left.fill" catalog="system" width="128" height="104"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
