--- a/MVC_Todo/VC/UpdateVC/UpdateVC.storyboard
+++ b/MVC_Todo/VC/UpdateVC/UpdateVC.storyboard
@@ -25,8 +25,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="arrowshape.left.fill" catalog="system"/>
                                         <connections>
-                                            <action selector="btnBack:" destination="gH2-1w-cea" eventType="touchUpInside" id="OIS-0X-Z2w"/>
-                                            <action selector="btnBackAction:" destination="gH2-1w-cea" eventType="touchUpInside" id="vfh-tP-OwC"/>
+                                            <action selector="btnBack:" destination="gH2-1w-cea" eventType="touchUpInside" id="GRg-x8-dew"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -63,8 +62,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Update"/>
                                 <connections>
-                                    <action selector="brnAddAction:" destination="gH2-1w-cea" eventType="touchUpInside" id="evp-Y5-Xue"/>
-                                    <action selector="btnUpdate:" destination="gH2-1w-cea" eventType="touchUpInside" id="8qk-4s-QHf"/>
+                                    <action selector="btnUpdate:" destination="gH2-1w-cea" eventType="touchUpInside" id="JyH-hw-Anj"/>
                                 </connections>
                             </button>
                         </subviews>
